fixed horizontal scrolling bug on mobile

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -33,11 +33,11 @@ body, html {
     background-color: $dark;
     background-image: url(../images/extracolor5.png);
     background-size: cover;
+    padding: 0 10px;
     
     table {
         color: white;
         font-size: 32px;
-        margin: 0 10px;
     }
 }
 
